[package]
name = "seton"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = {version="0.10", features=["wayland"]}
egui = "0.21.0"
bevy_egui = "0.20.2"
bevy_prototype_lyon = {version = "0.8.0"}
rand = {version="0.8.5", default-features = false, features=["alloc","std_rng","std"]}
ndarray = {version = "0.15.6", default-features = false}

[workspace]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 's'
