[package]
name = "seton"
version = "0.1.2"
edition = "2021"

[dependencies]
bevy = "0.11.0"
egui = "0.22.0"
bevy_egui = "0.21.0"
bevy_prototype_lyon = "0.9.0"
rand = {version="0.8.5", default-features = false, features=["alloc","std_rng","std"]}
ndarray = {version = "0.15.6", default-features = false}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
